unpackaged/objects/copado__Selenium_Settings__c.object
<CustomObject>
	<fields>
		<fullName>copado__Default_Org_Credential__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>This Credential will be used for Quick Runs. Each user has their own Quick Settings. Quick Settings are used when running tests using the Quick Run button.</inlineHelpText>
		<label>Default Credential</label>
		<referenceTo>copado__Org__c</referenceTo>
		<relationshipLabel>Selenium Settings</relationshipLabel>
		<relationshipName>SeleniumSettings</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Desired_Capabilities__c</fullName>
		<label>Desired Capabilities</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Device_Screen_Size__c</fullName>
		<description>Display Size for Windows/Mac platforms</description>
		<inlineHelpText>Display Size for Windows/Mac platforms. E.G. Saucelabs with Windows only supports small size ( &lt; 1280x1024 )</inlineHelpText>
		<label>Device Screen Size</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Big screen</fullName>
				</value>
				<value>
					<fullName>Medium screen</fullName>
					<default>true</default>
					<label>Medium screen</label>
				</value>
				<value>
					<fullName>Small screen</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Provider__c</fullName>
		<label>Provider</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Sauce Labs</fullName>
				</value>
				<value>
					<fullName>Browser Stack</fullName>
				</value>
				<value>
					<fullName>Custom/Other</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Selected_Platforms__c</fullName>
		<description>Used by Copado to store the selected platforms to be tested in JSON format.</description>
		<label>Selected Platforms</label>
		<length>130000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Webdriver_Proxy__c</fullName>
		<defaultValue>false</defaultValue>
		<description>Enables Saucelabs Connect or Browserstack Local Testing</description>
		<inlineHelpText>Use a local proxy to access an org behind a VPN? This enables Saucelabs Connect or Browserstack Local Testing.</inlineHelpText>
		<label>Webdriver Proxy</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Webdriver_URL__c</fullName>
		<inlineHelpText>Eg for Browserstack:
http://USER:TOKEN@hub.browserstack.com:80/wd/hub

Eg for Saucelabs:
http://USER:TOKEN@ondemand.saucelabs.com:80/wd/hub/</inlineHelpText>
		<label>Webdriver URL</label>
		<required>true</required>
		<type>Url</type>
	</fields>
	<label>Selenium Settings</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Default_Org_Credential__c</columns>
		<columns>CREATEDBY_USER</columns>
		<columns>CREATED_DATE</columns>
		<columns>UPDATEDBY_USER</columns>
		<columns>copado__Webdriver_URL__c</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<label>Selenium Test Provider Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Selenium Settings</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>